--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 /* Navigation menu */
 nav {
-  background-color: #004080;
+  background-color: #79d2a6;
   padding: 10px 0;
   text-align: center;
 }
@@ -25,7 +25,7 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #0073e6;
+  background-color: #b3e6cc;
   border-radius: 5px;
 }
 
@@ -40,7 +40,7 @@ main {
 
 /* Headings */
 h1, h2, h3 {
-  color: #004080;
+  color: #79d2a6;
 }
 
 /* Example of flex layout */
@@ -63,7 +63,7 @@ h1, h2, h3 {
 footer {
   text-align: center;
   padding: 15px;
-  background-color: #004080;
+  background-color: #79d2a6;
   color: white;
   font-size: 0.9em;
   margin-top: 30px;
