--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h1, h2, h3 {
   border-radius: 5px;
   background-color: #fafafa;
 }
-
+ /* Styles the Concepts table */
 table {
   width: 90%;
   margin: 20px auto;
